--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <main>
         <load src="./src/partials/hero.html" />
         <load src="./src/partials/about.html" />
+        <load src="./src/partials/history.html" />
 
     </main>
 
