--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
     <main>
         <load src="./src/partials/hero.html" />
         <load src="./src/partials/about.html" />
-        <load src="./src/partials/history.html" />
-
-        <load src="./src/partials/activity.html" />
+        <load src="./src/partials/story.html" />
 
         <load src="./src/partials/volunteers.html" />
         <load src="./src/partials/partners.html" />
 
         <load src="./src/partials/news.html" />
-        <load src="./src/partials/reports.html" />
-        <load src="./src/partials/materials.html" />
+
 
     </main>
 
