add some new pages, add donate-section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <load src="./src/partials/partners.html" />
 
         <load src="./src/partials/news.html" />
+        <load src="./src/partials/donate-section.html" />
+
+
 
 
     </main>
