--- a/src/pages/gallery.html
+++ b/src/pages/gallery.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>Атрымаць дапамогу | Bulwark</title>
+    <title>Галерэя | Bulwark</title>
 
 
 </head>
@@ -20,12 +20,11 @@
 
 
     <main class="relative min-h-screen w-full overflow-hidden bg-black">
-        <section id="materials" class="py-24 bg-[#1a1a1a] overflow-hidden">
+        <section id="materials" class="py-24 bg-black overflow-hidden">
             <div class="container-custom">
                 <div class="mb-16">
                     <span data-i18n="nav.materials"
-                        class="text-red-600 font-black uppercase tracking-[0.3em] text-sm">Як можна атрымаць
-                        дапамогу?</span>
+                        class="text-red-600 font-black uppercase tracking-[0.3em] text-sm">Галерэя</span>
 
                 </div>
 
