--- a/src/pages/materials.html
+++ b/src/pages/materials.html
@@ -1,11 +1,43 @@
-<section id="materials" class="py-24 bg-[#1a1a1a] overflow-hidden">
-    <div class="container-custom">
-        <div class="mb-16">
-            <span data-i18n="nav.materials"
-                class="text-red-600 font-black uppercase tracking-[0.3em] text-sm">Матэрыялы</span>
+<!DOCTYPE html>
+<html lang="be">
 
-        </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <title>Матэрыялы | Bulwark</title>
 
 
-    </div>
-</section>
+</head>
+
+<body>
+
+    <load src="/src/partials/header.html" />
+    <load src="/src/partials/mobile-menu.html" />
+
+
+
+    <main class="relative min-h-screen w-full overflow-hidden bg-black">
+        <section id="materials" class="py-24 bg-black overflow-hidden">
+            <div class="container-custom">
+                <div class="mb-16">
+                    <span data-i18n="nav.materials"
+                        class="text-red-600 font-black uppercase tracking-[0.3em] text-sm">Матэрыялы</span>
+
+                </div>
+
+
+            </div>
+        </section>
+
+    </main>
+
+
+    <load src="/src/partials/footer.html" />
+
+    <script type="module" src="/src/main.js"></script>
+</body>
+
+</html>
