--- a/src/pages/zarok-vajara.html
+++ b/src/pages/zarok-vajara.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>Гістарычны экскурс | Bulwark</title>
+    <title>Зарок ваяра | Bulwark</title>
 
 
 </head>
