--- a/src/pages/news-full.html
+++ b/src/pages/news-full.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>Навіны | Bulwark</title>
+    <title>Усе навіны | Bulwark</title>
 
 
 </head>
@@ -23,12 +23,14 @@
         <section id="materials" class="py-24 bg-[#1a1a1a] overflow-hidden">
             <div class="container-custom">
                 <div class="mb-16">
-                    <span data-i18n="nav.materials"
-                        class="text-red-600 font-black uppercase tracking-[0.3em] text-sm">Навіны (архіў)</span>
-
+                    <span data-i18n="nav.materials" class="text-red-600 font-black uppercase tracking-[0.3em] text-sm">
+                        Навіны (архіў)
+                    </span>
                 </div>
 
-
+                <div id="news-grid-full" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8">
+                    <div class="text-white/20 uppercase text-[10px] tracking-widest animate-pulse">Загрузка...</div>
+                </div>
             </div>
         </section>
 
