--- a/src/pages/materials.html
+++ b/src/pages/materials.html
@@ -4,12 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>Матэрыялы | Bulwark</title>
-
-
 </head>
 
 <body>
@@ -17,26 +14,84 @@
     <load src="/src/partials/header.html" />
     <load src="/src/partials/mobile-menu.html" />
 
+    <main class="relative min-h-screen w-full bg-black">
+        <section id="materials" class="py-24 bg-black">
+            <div class="container-custom mx-auto">
 
-
-    <main class="relative min-h-screen w-full overflow-hidden bg-black">
-        <section id="materials" class="py-24 bg-black overflow-hidden">
-            <div class="container-custom">
                 <div class="mb-16">
-                    <span data-i18n="nav.materials"
-                        class="text-red-600 font-black uppercase tracking-[0.3em] text-sm">Матэрыялы</span>
-
+                    <span data-i18n="nav.materials" class="text-red-600 font-black uppercase tracking-[0.3em] text-sm">
+                        Матэрыялы
+                    </span>
+                    <h1 class="text-white text-4xl md:text-6xl font-black uppercase italic mt-4">
+                        База ведаў
+                    </h1>
                 </div>
 
+                <div class="grid gap-8 pb-32" id="materials-container"></div>
+
+                <div id="material-modal" class="fixed inset-0 z-110 hidden">
+                    <div class="absolute inset-0 bg-black/95 backdrop-blur-md"></div>
+
+                    <div class="absolute inset-0 flex flex-col">
+                        <div class="grow overflow-y-auto py-12 md:py-24">
+                            <div class="container-custom mx-auto">
+                                <div
+                                    class="bg-[#0a0a0a] border border-white/10 w-full relative p-6 md:p-16 lg:p-20 shadow-2xl mb-32">
+                                    <button id="close-modal"
+                                        class="absolute top-6 right-6 text-white/30 hover:text-red-600 text-2xl transition-all hover:rotate-90 z-10">
+                                        <i class="fa-solid fa-xmark"></i>
+                                    </button>
+
+                                    <div id="modal-content" class="prose prose-invert max-w-none"></div>
+
+                                    <div
+                                        class="mt-16 pt-8 border-t border-white/5 flex flex-col md:flex-row items-center justify-between gap-8">
+                                        <div class="flex flex-wrap items-center justify-center gap-6">
+                                            <button id="print-material"
+                                                class="flex items-center gap-2 text-[10px] font-black uppercase tracking-widest text-white/50 hover:text-red-600 transition-colors">
+                                                <i class="fa-solid fa-print text-sm"></i>
+                                                <span>Надрукаваць / PDF</span>
+                                            </button>
+                                            <button id="copy-material"
+                                                class="flex items-center gap-2 text-[10px] font-black uppercase tracking-widest text-white/50 hover:text-red-600 transition-colors">
+                                                <i class="fa-solid fa-copy text-sm"></i>
+                                                <span id="copy-text">Скапіяваць тэкст</span>
+                                            </button>
+                                        </div>
+                                        <button onclick="document.getElementById('close-modal').click()"
+                                            class="text-[10px] font-black tracking-[0.3em] text-white/50 hover:text-red-600 transition-colors uppercase italic">
+                                            [ Закрыць матэрыял ]
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="w-full z-120 pb-8 pointer-events-none">
+                            <div class="container-custom mx-auto">
+                                <div
+                                    class="bg-black border border-white/10 p-4 pointer-events-auto shadow-[0_-10px_40px_rgba(0,0,0,0.8)]">
+                                    <div id="modal-internal-nav" class="flex flex-wrap justify-center gap-2"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="fixed bottom-0 left-0 w-full z-100 pointer-events-none pb-8">
+                    <div class="container-custom mx-auto">
+                        <div
+                            class="bg-black border border-white/10 p-4 pointer-events-auto shadow-[0_-10px_40px_rgba(0,0,0,0.8)]">
+                            <div class="flex flex-wrap justify-center gap-2" id="materials-nav"></div>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </section>
-
     </main>
 
-
     <load src="/src/partials/footer.html" />
-
     <script type="module" src="/src/main.js"></script>
 </body>
 
