refactor: unify modal logic and integrate with news and materials

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
     </main>
-
+    <load src="/src/partials/modal.html" />
     <load src="./src/partials/footer.html" />
 
     <script type="module" src="./src/main.js"></script>
