mod donation section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-
+    <div class="fixed inset-0 pointer-events-none z-0 overflow-hidden">
+        <div
+            class="absolute top-0 left-1/2 -translate-x-1/2 w-[200vw] h-[200vh] bg-gradient-to-br from-transparent via-red-600/[0.03] to-transparent rotate-[15deg] origin-center">
+        </div>
+    </div>
     <load src="./src/partials/header.html" />
     <load src="./src/partials/mobile-menu.html" />
     <main>
