feat: implement multi-language reports grid and new modal template refactoring reports.html

--- a/src/pages/reports.html
+++ b/src/pages/reports.html
@@ -20,10 +20,10 @@
 
 
     <main class="relative min-h-screen w-full overflow-hidden bg-black">
-        <section id="reports" class="py-24 bg-[#1a1a1a] overflow-hidden">
+        <section id="reports" class="py-12 bg-black overflow-hidden">
             <div class="container-custom">
-                <div class="mb-16">
-                    <span data-i18n="nav.reports" class="text-red-600 font-black uppercase tracking-[0.3em] text-sm">
+                <div class="mb-12">
+                    <span data-i18n="nav.reports" class="text-red-600 font-black uppercase tracking-[0.3em] text-xl">
                         Справаздачы
                     </span>
                 </div>
@@ -39,8 +39,10 @@
 
 
     <load src="/src/partials/footer.html" />
-
+    <load src="/src/partials/modal.html" />
     <script type="module" src="/src/main.js"></script>
+
+
 </body>
 
 </html>
