feat: implement GDPR compliance (privacy policy & cookie banner)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </main>
     <load src="/src/partials/modal.html" />
     <load src="./src/partials/footer.html" />
-
+    <load src="./src/partials/cookies.html" />
     <script type="module" src="./src/main.js"></script>
 </body>
 
